Textarea overflow fixed

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -206,31 +206,37 @@ font-family: 'Inconsolata', monospace;
     opacity: 0.7;
     border-bottom:1vh solid black;
 }
+textarea{
+    overflow: hidden;
+     max-width: 100%;
+  max-height: 100%;
+  box-sizing: border-box;
+}
 .hotspot{
-    position:relative;
+    position:absolute;
     left:39%; 
     top:53%; 
     height:20%;
     z-index: 2;
 }
 .hotspot1{
-    position:relative;
-    left:65%; 
+    position:absolute;
+    left:73%; 
     top:49%; 
     height:20%;
     z-index: 2;
 }
 .hotspot2{
-    position:relative;
+    position:absolute;
     left:36%; 
-    top:32%; 
+    top:35%; 
     height:20%;
     z-index: 2;
 }
 .hotspot3{
-    position:relative;
-    left:-10%; 
-    top:38%; 
+    position:absolute;
+    left:55%; 
+    top:35%; 
     height:20%;
     z-index: 2;
 }
